--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "php": ">=7.0.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.4.0",
+        "doctrine/dbal": "~2.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.5",
