--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "barryvdh/laravel-dompdf": "^0.8.3",
+        "doctrine/dbal": "~2.3",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
-        "doctrine/dbal": "~2.3"
+        "twbs/bootstrap": "4.1.3"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.5",
